--- a/css/main.css
+++ b/css/main.css
@@ -4,8 +4,6 @@
 }
 
 body {
-    font-family: 'Indie Flower', cursive;
-    font-family: 'Pacifico', cursive;
     font-family: 'Dancing Script', cursive;
 }
 
@@ -146,35 +144,7 @@ body {
 *****  FOOTER
 */
 
-.redes-sociais {
-    padding: 2em;
-}
-
-.redes-sociais ul {
-    display: flex;
-    justify-content: space-around;
-    align-content: center;
-    flex-direction: row;
-}
-
-.redes-sociais ul li {
-    list-style-type: none;
-}
-
-.botoes-redes {
-    text-align: center;
-}
-
-.redes-sociais ul li h2 {
-    font-size: 1.5em;
-}
-
-.redes-sociais ul li a {
-    color: #000;
-    text-decoration: none;
-}
-
-.redes-sociais p {
+.rodape p {
     margin-top: 2em;
     text-align: center;
 }
@@ -223,17 +193,24 @@ th{
     .nav-h-desktop {
         display: none;
     }
-    
-    .nav-h-mobile {
-        display: none;
+
+    .botao-menu-icone {
+        position: relative;
+        top: 20%;
+        width: 35px;
+        height: 5px;
+        background-color: black;
+        margin: 2px 0;
     }
 
     .botao-menu{
         display: flex;
+        flex-direction: column;
         align-items: center;
         justify-items: center;
         position: absolute;
-        height: 3.7em;
+        height: 3em;
+        width: 3em;
         margin-top: 0.5em;
         background: #CEF6D8;
         color: #8A4B08;
@@ -303,15 +280,7 @@ th{
     *****  FOOTER
     */
 
-    .botoes-redes {
-        font-size: 0.7em;
-    }
-
-    .redes-sociais ul li h2 {
-        font-size: 1.2em;
-    }
-
-    .redes-sociais p {
+    .rodape p {
         font-size: 1.2em;
     }
 
