--- a/css/php.css
+++ b/css/php.css
@@ -53,6 +53,9 @@
 
 #corpo-consulta{
     font-family: Arial, Helvetica, sans-serif;
+    display: flex;
+    justify-content: flex-start;
+    height: auto;
     border: none;
 }
 
